[package]
name = "memsimp"
version = "0.2.0"
authors = ["Skadic <me@skadic.moe>"]
edition = "2021"
about = "A simple runtime memory tracker for Linux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
